# nanopub-java

./: .coveralls.yml  .gitignore  .gitmodules  404.html  CHANGELOG.md  Dockerfile  LICENSE.txt  NOTES.md  README.md  coverage-summary.json  index.html  initialize.sh  install.sh  java-cli.md  mkdocs.yml  objects.inv  package-lock.json  pom.xml  pyproject.toml  release.config.js  settings.xml  sitemap.xml
.github/workflows/: docs.yml  maven-test.yml  pull-request.yml  release.yml  snapshot-release.yml
docs/: index.md  quickstart.md
docs/getting-started/: setup.md  what-are-nanopubs.md
docs/quick-start/: cli.md  java.md
getting-started/setup/: index.html
getting-started/what-are-nanopubs/: index.html
quick-start/cli/: index.html
quick-start/java/: index.html
reports/test-coverage/: index.html  index.txt  jacoco-sessions.html  jacoco.csv  jacoco.xml
reports/test-coverage/org.nanopub.extra.aida/: AidaPattern.html  AidaPattern.java.html  index.html  index.source.html
reports/test-coverage/org.nanopub.extra.index/: IndexUtils.html  IndexUtils.java.html  MakeIndex$1.html  MakeIndex.html  MakeIndex.java.html  NanopubIndexCreator.html  NanopubIndexCreator.java.html  NanopubIndexImpl.html  NanopubIndexImpl.java.html  NanopubIndexPattern.html  index.html  (+4 more)
scripts/: CheckNanopub.sh  CheckSignature.sh  CheckTrustyNanopub.sh  FixTrustyNanopub.sh  GetNanopub.sh  GetServerInfo.sh  MakeIndex.sh  MakeKeys.sh  MakeTrustyNanopub.sh  Nanopub2Html.sh  NanopubStatus.sh  PublishNanopub.sh  SignNanopub.sh  ValidateNanopub.sh  exec-class.sh  run.sh
search/: search_index.json
(+648 files in other folders)
