[tool.poetry]
description = ""
authors = ["Ashley Caselli <ashley@knowledgepixels.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.15"
mkdocs-autorefs = "^1.4.2"
mkdocstrings-python = "^1.16.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
